APL_FLASK_APP/app/modules/main/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> command
Rule 1     command -> list_command
Rule 2     command -> book_command
Rule 3     command -> confirm_command
Rule 4     command -> pay_command
Rule 5     command -> cancel_command
Rule 6     command -> show_command
Rule 7     command -> help_command
Rule 8     help_command -> HELP
Rule 9     help_command -> HELP STRING
Rule 10    list_command -> LIST STRING SCHEDULE FROM STRING TO STRING ON DATE AT TIME
Rule 11    list_command -> LIST AVAILABLE STRING IN STRING
Rule 12    list_command -> LIST AVAILABLE EVENTS IN STRING
Rule 13    list_command -> LIST TICKETS FOR STRING
Rule 14    list_command -> LIST TICKETS FOR STRING ON DATE
Rule 15    book_command -> BOOK STRING FROM STRING TO STRING ON DATE AT TIME FOR STRING FOR QUANTITY
Rule 16    book_command -> BOOK STRING AT STRING ON DATE AT TIME FOR STRING IN CLASS_TYPE FOR QUANTITY
Rule 17    book_command -> BOOK STRING ON DATE AT TIME FOR STRING FOR QUANTITY
Rule 18    book_command -> BOOK STRING FROM DATE TO DATE AT TIME FOR STRING FOR QUANTITY
Rule 19    book_command -> BOOK QUANTITY STRING FROM TIME TO TIME ON DATE FOR STRING
Rule 20    confirm_command -> CONFIRM QUANTITY RESERVATION FOR STRING FOR STRING
Rule 21    confirm_command -> CONFIRM ALL RESERVATION FOR STRING
Rule 22    pay_command -> PAY FOR QUANTITY STRING RESERVATION FOR STRING
Rule 23    pay_command -> PAY FOR ALL RESERVATION FOR STRING
Rule 24    pay_command -> PAY ALL RESERVATION FOR STRING
Rule 25    cancel_command -> CANCEL QUANTITY STRING RESERVATION FOR STRING
Rule 26    cancel_command -> CANCEL ALL RESERVATION FOR STRING
Rule 27    show_command -> SHOW ALL STATUS RESERVATION FOR STRING
Rule 28    show_command -> SHOW ALL RESERVATION FOR STRING
Rule 29    show_command -> SHOW STRING RESERVATION FOR STRING

Terminals, with rules where they appear

ALL                  : 21 23 24 26 27 28
AT                   : 10 15 16 16 17 18
AVAILABLE            : 11 12
BOOK                 : 15 16 17 18 19
CANCEL               : 25 26
CLASS_TYPE           : 16
CONFIRM              : 20 21
DATE                 : 10 14 15 16 17 18 18 19
EVENTS               : 12
FOR                  : 13 14 15 15 16 16 17 17 18 18 19 20 20 21 22 22 23 23 24 25 26 27 28 29
FROM                 : 10 15 18 19
HELP                 : 8 9
IN                   : 11 12 16
LIST                 : 10 11 12 13 14
ON                   : 10 14 15 16 17 19
PAY                  : 22 23 24
QUANTITY             : 15 16 17 18 19 20 22 25
RESERVATION          : 20 21 22 23 24 25 26 27 28 29
SCHEDULE             : 10
SHOW                 : 27 28 29
STATUS               : 27
STRING               : 9 10 10 10 11 11 12 13 14 15 15 15 15 16 16 16 17 17 18 18 19 19 20 20 21 22 22 23 24 25 25 26 27 28 29 29
TICKETS              : 13 14
TIME                 : 10 15 16 17 18 19 19
TO                   : 10 15 18 19
error                : 

Nonterminals, with rules where they appear

book_command         : 2
cancel_command       : 5
command              : 0
confirm_command      : 3
help_command         : 7
list_command         : 1
pay_command          : 4
show_command         : 6

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . list_command
    (2) command -> . book_command
    (3) command -> . confirm_command
    (4) command -> . pay_command
    (5) command -> . cancel_command
    (6) command -> . show_command
    (7) command -> . help_command
    (10) list_command -> . LIST STRING SCHEDULE FROM STRING TO STRING ON DATE AT TIME
    (11) list_command -> . LIST AVAILABLE STRING IN STRING
    (12) list_command -> . LIST AVAILABLE EVENTS IN STRING
    (13) list_command -> . LIST TICKETS FOR STRING
    (14) list_command -> . LIST TICKETS FOR STRING ON DATE
    (15) book_command -> . BOOK STRING FROM STRING TO STRING ON DATE AT TIME FOR STRING FOR QUANTITY
    (16) book_command -> . BOOK STRING AT STRING ON DATE AT TIME FOR STRING IN CLASS_TYPE FOR QUANTITY
    (17) book_command -> . BOOK STRING ON DATE AT TIME FOR STRING FOR QUANTITY
    (18) book_command -> . BOOK STRING FROM DATE TO DATE AT TIME FOR STRING FOR QUANTITY
    (19) book_command -> . BOOK QUANTITY STRING FROM TIME TO TIME ON DATE FOR STRING
    (20) confirm_command -> . CONFIRM QUANTITY RESERVATION FOR STRING FOR STRING
    (21) confirm_command -> . CONFIRM ALL RESERVATION FOR STRING
    (22) pay_command -> . PAY FOR QUANTITY STRING RESERVATION FOR STRING
    (23) pay_command -> . PAY FOR ALL RESERVATION FOR STRING
    (24) pay_command -> . PAY ALL RESERVATION FOR STRING
    (25) cancel_command -> . CANCEL QUANTITY STRING RESERVATION FOR STRING
    (26) cancel_command -> . CANCEL ALL RESERVATION FOR STRING
    (27) show_command -> . SHOW ALL STATUS RESERVATION FOR STRING
    (28) show_command -> . SHOW ALL RESERVATION FOR STRING
    (29) show_command -> . SHOW STRING RESERVATION FOR STRING
    (8) help_command -> . HELP
    (9) help_command -> . HELP STRING

    LIST            shift and go to state 9
    BOOK            shift and go to state 10
    CONFIRM         shift and go to state 11
    PAY             shift and go to state 12
    CANCEL          shift and go to state 13
    SHOW            shift and go to state 14
    HELP            shift and go to state 15

    command                        shift and go to state 1
    list_command                   shift and go to state 2
    book_command                   shift and go to state 3
    confirm_command                shift and go to state 4
    pay_command                    shift and go to state 5
    cancel_command                 shift and go to state 6
    show_command                   shift and go to state 7
    help_command                   shift and go to state 8

state 1

    (0) S' -> command .



state 2

    (1) command -> list_command .

    $end            reduce using rule 1 (command -> list_command .)


state 3

    (2) command -> book_command .

    $end            reduce using rule 2 (command -> book_command .)


state 4

    (3) command -> confirm_command .

    $end            reduce using rule 3 (command -> confirm_command .)


state 5

    (4) command -> pay_command .

    $end            reduce using rule 4 (command -> pay_command .)


state 6

    (5) command -> cancel_command .

    $end            reduce using rule 5 (command -> cancel_command .)


state 7

    (6) command -> show_command .

    $end            reduce using rule 6 (command -> show_command .)


state 8

    (7) command -> help_command .

    $end            reduce using rule 7 (command -> help_command .)


state 9

    (10) list_command -> LIST . STRING SCHEDULE FROM STRING TO STRING ON DATE AT TIME
    (11) list_command -> LIST . AVAILABLE STRING IN STRING
    (12) list_command -> LIST . AVAILABLE EVENTS IN STRING
    (13) list_command -> LIST . TICKETS FOR STRING
    (14) list_command -> LIST . TICKETS FOR STRING ON DATE

    STRING          shift and go to state 16
    AVAILABLE       shift and go to state 17
    TICKETS         shift and go to state 18


state 10

    (15) book_command -> BOOK . STRING FROM STRING TO STRING ON DATE AT TIME FOR STRING FOR QUANTITY
    (16) book_command -> BOOK . STRING AT STRING ON DATE AT TIME FOR STRING IN CLASS_TYPE FOR QUANTITY
    (17) book_command -> BOOK . STRING ON DATE AT TIME FOR STRING FOR QUANTITY
    (18) book_command -> BOOK . STRING FROM DATE TO DATE AT TIME FOR STRING FOR QUANTITY
    (19) book_command -> BOOK . QUANTITY STRING FROM TIME TO TIME ON DATE FOR STRING

    STRING          shift and go to state 19
    QUANTITY        shift and go to state 20


state 11

    (20) confirm_command -> CONFIRM . QUANTITY RESERVATION FOR STRING FOR STRING
    (21) confirm_command -> CONFIRM . ALL RESERVATION FOR STRING

    QUANTITY        shift and go to state 21
    ALL             shift and go to state 22


state 12

    (22) pay_command -> PAY . FOR QUANTITY STRING RESERVATION FOR STRING
    (23) pay_command -> PAY . FOR ALL RESERVATION FOR STRING
    (24) pay_command -> PAY . ALL RESERVATION FOR STRING

    FOR             shift and go to state 23
    ALL             shift and go to state 24


state 13

    (25) cancel_command -> CANCEL . QUANTITY STRING RESERVATION FOR STRING
    (26) cancel_command -> CANCEL . ALL RESERVATION FOR STRING

    QUANTITY        shift and go to state 25
    ALL             shift and go to state 26


state 14

    (27) show_command -> SHOW . ALL STATUS RESERVATION FOR STRING
    (28) show_command -> SHOW . ALL RESERVATION FOR STRING
    (29) show_command -> SHOW . STRING RESERVATION FOR STRING

    ALL             shift and go to state 27
    STRING          shift and go to state 28


state 15

    (8) help_command -> HELP .
    (9) help_command -> HELP . STRING

    $end            reduce using rule 8 (help_command -> HELP .)
    STRING          shift and go to state 29


state 16

    (10) list_command -> LIST STRING . SCHEDULE FROM STRING TO STRING ON DATE AT TIME

    SCHEDULE        shift and go to state 30


state 17

    (11) list_command -> LIST AVAILABLE . STRING IN STRING
    (12) list_command -> LIST AVAILABLE . EVENTS IN STRING

    STRING          shift and go to state 31
    EVENTS          shift and go to state 32


state 18

    (13) list_command -> LIST TICKETS . FOR STRING
    (14) list_command -> LIST TICKETS . FOR STRING ON DATE

    FOR             shift and go to state 33


state 19

    (15) book_command -> BOOK STRING . FROM STRING TO STRING ON DATE AT TIME FOR STRING FOR QUANTITY
    (16) book_command -> BOOK STRING . AT STRING ON DATE AT TIME FOR STRING IN CLASS_TYPE FOR QUANTITY
    (17) book_command -> BOOK STRING . ON DATE AT TIME FOR STRING FOR QUANTITY
    (18) book_command -> BOOK STRING . FROM DATE TO DATE AT TIME FOR STRING FOR QUANTITY

    FROM            shift and go to state 34
    AT              shift and go to state 36
    ON              shift and go to state 35


state 20

    (19) book_command -> BOOK QUANTITY . STRING FROM TIME TO TIME ON DATE FOR STRING

    STRING          shift and go to state 37


state 21

    (20) confirm_command -> CONFIRM QUANTITY . RESERVATION FOR STRING FOR STRING

    RESERVATION     shift and go to state 38


state 22

    (21) confirm_command -> CONFIRM ALL . RESERVATION FOR STRING

    RESERVATION     shift and go to state 39


state 23

    (22) pay_command -> PAY FOR . QUANTITY STRING RESERVATION FOR STRING
    (23) pay_command -> PAY FOR . ALL RESERVATION FOR STRING

    QUANTITY        shift and go to state 40
    ALL             shift and go to state 41


state 24

    (24) pay_command -> PAY ALL . RESERVATION FOR STRING

    RESERVATION     shift and go to state 42


state 25

    (25) cancel_command -> CANCEL QUANTITY . STRING RESERVATION FOR STRING

    STRING          shift and go to state 43


state 26

    (26) cancel_command -> CANCEL ALL . RESERVATION FOR STRING

    RESERVATION     shift and go to state 44


state 27

    (27) show_command -> SHOW ALL . STATUS RESERVATION FOR STRING
    (28) show_command -> SHOW ALL . RESERVATION FOR STRING

    STATUS          shift and go to state 45
    RESERVATION     shift and go to state 46


state 28

    (29) show_command -> SHOW STRING . RESERVATION FOR STRING

    RESERVATION     shift and go to state 47


state 29

    (9) help_command -> HELP STRING .

    $end            reduce using rule 9 (help_command -> HELP STRING .)


state 30

    (10) list_command -> LIST STRING SCHEDULE . FROM STRING TO STRING ON DATE AT TIME

    FROM            shift and go to state 48


state 31

    (11) list_command -> LIST AVAILABLE STRING . IN STRING

    IN              shift and go to state 49


state 32

    (12) list_command -> LIST AVAILABLE EVENTS . IN STRING

    IN              shift and go to state 50


state 33

    (13) list_command -> LIST TICKETS FOR . STRING
    (14) list_command -> LIST TICKETS FOR . STRING ON DATE

    STRING          shift and go to state 51


state 34

    (15) book_command -> BOOK STRING FROM . STRING TO STRING ON DATE AT TIME FOR STRING FOR QUANTITY
    (18) book_command -> BOOK STRING FROM . DATE TO DATE AT TIME FOR STRING FOR QUANTITY

    STRING          shift and go to state 52
    DATE            shift and go to state 53


state 35

    (17) book_command -> BOOK STRING ON . DATE AT TIME FOR STRING FOR QUANTITY

    DATE            shift and go to state 54


state 36

    (16) book_command -> BOOK STRING AT . STRING ON DATE AT TIME FOR STRING IN CLASS_TYPE FOR QUANTITY

    STRING          shift and go to state 55


state 37

    (19) book_command -> BOOK QUANTITY STRING . FROM TIME TO TIME ON DATE FOR STRING

    FROM            shift and go to state 56


state 38

    (20) confirm_command -> CONFIRM QUANTITY RESERVATION . FOR STRING FOR STRING

    FOR             shift and go to state 57


state 39

    (21) confirm_command -> CONFIRM ALL RESERVATION . FOR STRING

    FOR             shift and go to state 58


state 40

    (22) pay_command -> PAY FOR QUANTITY . STRING RESERVATION FOR STRING

    STRING          shift and go to state 59


state 41

    (23) pay_command -> PAY FOR ALL . RESERVATION FOR STRING

    RESERVATION     shift and go to state 60


state 42

    (24) pay_command -> PAY ALL RESERVATION . FOR STRING

    FOR             shift and go to state 61


state 43

    (25) cancel_command -> CANCEL QUANTITY STRING . RESERVATION FOR STRING

    RESERVATION     shift and go to state 62


state 44

    (26) cancel_command -> CANCEL ALL RESERVATION . FOR STRING

    FOR             shift and go to state 63


state 45

    (27) show_command -> SHOW ALL STATUS . RESERVATION FOR STRING

    RESERVATION     shift and go to state 64


state 46

    (28) show_command -> SHOW ALL RESERVATION . FOR STRING

    FOR             shift and go to state 65


state 47

    (29) show_command -> SHOW STRING RESERVATION . FOR STRING

    FOR             shift and go to state 66


state 48

    (10) list_command -> LIST STRING SCHEDULE FROM . STRING TO STRING ON DATE AT TIME

    STRING          shift and go to state 67


state 49

    (11) list_command -> LIST AVAILABLE STRING IN . STRING

    STRING          shift and go to state 68


state 50

    (12) list_command -> LIST AVAILABLE EVENTS IN . STRING

    STRING          shift and go to state 69


state 51

    (13) list_command -> LIST TICKETS FOR STRING .
    (14) list_command -> LIST TICKETS FOR STRING . ON DATE

    $end            reduce using rule 13 (list_command -> LIST TICKETS FOR STRING .)
    ON              shift and go to state 70


state 52

    (15) book_command -> BOOK STRING FROM STRING . TO STRING ON DATE AT TIME FOR STRING FOR QUANTITY

    TO              shift and go to state 71


state 53

    (18) book_command -> BOOK STRING FROM DATE . TO DATE AT TIME FOR STRING FOR QUANTITY

    TO              shift and go to state 72


state 54

    (17) book_command -> BOOK STRING ON DATE . AT TIME FOR STRING FOR QUANTITY

    AT              shift and go to state 73


state 55

    (16) book_command -> BOOK STRING AT STRING . ON DATE AT TIME FOR STRING IN CLASS_TYPE FOR QUANTITY

    ON              shift and go to state 74


state 56

    (19) book_command -> BOOK QUANTITY STRING FROM . TIME TO TIME ON DATE FOR STRING

    TIME            shift and go to state 75


state 57

    (20) confirm_command -> CONFIRM QUANTITY RESERVATION FOR . STRING FOR STRING

    STRING          shift and go to state 76


state 58

    (21) confirm_command -> CONFIRM ALL RESERVATION FOR . STRING

    STRING          shift and go to state 77


state 59

    (22) pay_command -> PAY FOR QUANTITY STRING . RESERVATION FOR STRING

    RESERVATION     shift and go to state 78


state 60

    (23) pay_command -> PAY FOR ALL RESERVATION . FOR STRING

    FOR             shift and go to state 79


state 61

    (24) pay_command -> PAY ALL RESERVATION FOR . STRING

    STRING          shift and go to state 80


state 62

    (25) cancel_command -> CANCEL QUANTITY STRING RESERVATION . FOR STRING

    FOR             shift and go to state 81


state 63

    (26) cancel_command -> CANCEL ALL RESERVATION FOR . STRING

    STRING          shift and go to state 82


state 64

    (27) show_command -> SHOW ALL STATUS RESERVATION . FOR STRING

    FOR             shift and go to state 83


state 65

    (28) show_command -> SHOW ALL RESERVATION FOR . STRING

    STRING          shift and go to state 84


state 66

    (29) show_command -> SHOW STRING RESERVATION FOR . STRING

    STRING          shift and go to state 85


state 67

    (10) list_command -> LIST STRING SCHEDULE FROM STRING . TO STRING ON DATE AT TIME

    TO              shift and go to state 86


state 68

    (11) list_command -> LIST AVAILABLE STRING IN STRING .

    $end            reduce using rule 11 (list_command -> LIST AVAILABLE STRING IN STRING .)


state 69

    (12) list_command -> LIST AVAILABLE EVENTS IN STRING .

    $end            reduce using rule 12 (list_command -> LIST AVAILABLE EVENTS IN STRING .)


state 70

    (14) list_command -> LIST TICKETS FOR STRING ON . DATE

    DATE            shift and go to state 87


state 71

    (15) book_command -> BOOK STRING FROM STRING TO . STRING ON DATE AT TIME FOR STRING FOR QUANTITY

    STRING          shift and go to state 88


state 72

    (18) book_command -> BOOK STRING FROM DATE TO . DATE AT TIME FOR STRING FOR QUANTITY

    DATE            shift and go to state 89


state 73

    (17) book_command -> BOOK STRING ON DATE AT . TIME FOR STRING FOR QUANTITY

    TIME            shift and go to state 90


state 74

    (16) book_command -> BOOK STRING AT STRING ON . DATE AT TIME FOR STRING IN CLASS_TYPE FOR QUANTITY

    DATE            shift and go to state 91


state 75

    (19) book_command -> BOOK QUANTITY STRING FROM TIME . TO TIME ON DATE FOR STRING

    TO              shift and go to state 92


state 76

    (20) confirm_command -> CONFIRM QUANTITY RESERVATION FOR STRING . FOR STRING

    FOR             shift and go to state 93


state 77

    (21) confirm_command -> CONFIRM ALL RESERVATION FOR STRING .

    $end            reduce using rule 21 (confirm_command -> CONFIRM ALL RESERVATION FOR STRING .)


state 78

    (22) pay_command -> PAY FOR QUANTITY STRING RESERVATION . FOR STRING

    FOR             shift and go to state 94


state 79

    (23) pay_command -> PAY FOR ALL RESERVATION FOR . STRING

    STRING          shift and go to state 95


state 80

    (24) pay_command -> PAY ALL RESERVATION FOR STRING .

    $end            reduce using rule 24 (pay_command -> PAY ALL RESERVATION FOR STRING .)


state 81

    (25) cancel_command -> CANCEL QUANTITY STRING RESERVATION FOR . STRING

    STRING          shift and go to state 96


state 82

    (26) cancel_command -> CANCEL ALL RESERVATION FOR STRING .

    $end            reduce using rule 26 (cancel_command -> CANCEL ALL RESERVATION FOR STRING .)


state 83

    (27) show_command -> SHOW ALL STATUS RESERVATION FOR . STRING

    STRING          shift and go to state 97


state 84

    (28) show_command -> SHOW ALL RESERVATION FOR STRING .

    $end            reduce using rule 28 (show_command -> SHOW ALL RESERVATION FOR STRING .)


state 85

    (29) show_command -> SHOW STRING RESERVATION FOR STRING .

    $end            reduce using rule 29 (show_command -> SHOW STRING RESERVATION FOR STRING .)


state 86

    (10) list_command -> LIST STRING SCHEDULE FROM STRING TO . STRING ON DATE AT TIME

    STRING          shift and go to state 98


state 87

    (14) list_command -> LIST TICKETS FOR STRING ON DATE .

    $end            reduce using rule 14 (list_command -> LIST TICKETS FOR STRING ON DATE .)


state 88

    (15) book_command -> BOOK STRING FROM STRING TO STRING . ON DATE AT TIME FOR STRING FOR QUANTITY

    ON              shift and go to state 99


state 89

    (18) book_command -> BOOK STRING FROM DATE TO DATE . AT TIME FOR STRING FOR QUANTITY

    AT              shift and go to state 100


state 90

    (17) book_command -> BOOK STRING ON DATE AT TIME . FOR STRING FOR QUANTITY

    FOR             shift and go to state 101


state 91

    (16) book_command -> BOOK STRING AT STRING ON DATE . AT TIME FOR STRING IN CLASS_TYPE FOR QUANTITY

    AT              shift and go to state 102


state 92

    (19) book_command -> BOOK QUANTITY STRING FROM TIME TO . TIME ON DATE FOR STRING

    TIME            shift and go to state 103


state 93

    (20) confirm_command -> CONFIRM QUANTITY RESERVATION FOR STRING FOR . STRING

    STRING          shift and go to state 104


state 94

    (22) pay_command -> PAY FOR QUANTITY STRING RESERVATION FOR . STRING

    STRING          shift and go to state 105


state 95

    (23) pay_command -> PAY FOR ALL RESERVATION FOR STRING .

    $end            reduce using rule 23 (pay_command -> PAY FOR ALL RESERVATION FOR STRING .)


state 96

    (25) cancel_command -> CANCEL QUANTITY STRING RESERVATION FOR STRING .

    $end            reduce using rule 25 (cancel_command -> CANCEL QUANTITY STRING RESERVATION FOR STRING .)


state 97

    (27) show_command -> SHOW ALL STATUS RESERVATION FOR STRING .

    $end            reduce using rule 27 (show_command -> SHOW ALL STATUS RESERVATION FOR STRING .)


state 98

    (10) list_command -> LIST STRING SCHEDULE FROM STRING TO STRING . ON DATE AT TIME

    ON              shift and go to state 106


state 99

    (15) book_command -> BOOK STRING FROM STRING TO STRING ON . DATE AT TIME FOR STRING FOR QUANTITY

    DATE            shift and go to state 107


state 100

    (18) book_command -> BOOK STRING FROM DATE TO DATE AT . TIME FOR STRING FOR QUANTITY

    TIME            shift and go to state 108


state 101

    (17) book_command -> BOOK STRING ON DATE AT TIME FOR . STRING FOR QUANTITY

    STRING          shift and go to state 109


state 102

    (16) book_command -> BOOK STRING AT STRING ON DATE AT . TIME FOR STRING IN CLASS_TYPE FOR QUANTITY

    TIME            shift and go to state 110


state 103

    (19) book_command -> BOOK QUANTITY STRING FROM TIME TO TIME . ON DATE FOR STRING

    ON              shift and go to state 111


state 104

    (20) confirm_command -> CONFIRM QUANTITY RESERVATION FOR STRING FOR STRING .

    $end            reduce using rule 20 (confirm_command -> CONFIRM QUANTITY RESERVATION FOR STRING FOR STRING .)


state 105

    (22) pay_command -> PAY FOR QUANTITY STRING RESERVATION FOR STRING .

    $end            reduce using rule 22 (pay_command -> PAY FOR QUANTITY STRING RESERVATION FOR STRING .)


state 106

    (10) list_command -> LIST STRING SCHEDULE FROM STRING TO STRING ON . DATE AT TIME

    DATE            shift and go to state 112


state 107

    (15) book_command -> BOOK STRING FROM STRING TO STRING ON DATE . AT TIME FOR STRING FOR QUANTITY

    AT              shift and go to state 113


state 108

    (18) book_command -> BOOK STRING FROM DATE TO DATE AT TIME . FOR STRING FOR QUANTITY

    FOR             shift and go to state 114


state 109

    (17) book_command -> BOOK STRING ON DATE AT TIME FOR STRING . FOR QUANTITY

    FOR             shift and go to state 115


state 110

    (16) book_command -> BOOK STRING AT STRING ON DATE AT TIME . FOR STRING IN CLASS_TYPE FOR QUANTITY

    FOR             shift and go to state 116


state 111

    (19) book_command -> BOOK QUANTITY STRING FROM TIME TO TIME ON . DATE FOR STRING

    DATE            shift and go to state 117


state 112

    (10) list_command -> LIST STRING SCHEDULE FROM STRING TO STRING ON DATE . AT TIME

    AT              shift and go to state 118


state 113

    (15) book_command -> BOOK STRING FROM STRING TO STRING ON DATE AT . TIME FOR STRING FOR QUANTITY

    TIME            shift and go to state 119


state 114

